tests/ui/fail/invalid_syntax.rs
use in_place::in_place;

fn run() {
    in_place!(meow);
}

fn main() {
    let _ = run;
}
